fix: updated mobile download cv visibility

--- a/portfolio/src/components/Navbar/Navbar.css
+++ b/portfolio/src/components/Navbar/Navbar.css
@@ -358,7 +358,7 @@
         display: none;
     }
 
-    .contact-button {
+    .navbar-cv-buttons {
         display: none;
     }
 }
